# tinybooter

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  LICENSE  Makefile  README.md  conanfile.txt  conf.ini  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cd.yml  ci.yml  cmake.yml  container.yml
core/: CMakeLists.txt
core/include/: App.h  Application.h  ChildProcess.h  Job.h  JobsManager.h  Monitor.h
core/include/config/: DaemonConfig.h  JobConfig.h  RunOnceJobConfig.h  SystemConfig.h
core/include/util/: BasicFactory.h
core/src/: App.cpp  Application.cpp  ChildProcess.cpp  Job.cpp  JobsManager.cpp  Monitor.cpp
example/: config.yaml
example/conf/: 2-cleanup.yaml  init.yaml  service.yaml  teardown.yaml
healthcheck/: CMakeLists.txt
healthcheck/src/: healthcheck.cpp
include/: App.h  AsyncProcess.h  ChildProcess.h  CliService.hpp  Config.h  ConfigLoader.hpp  Kernel.hpp  Logger.hpp  Monitor.h  Service.hpp  ServiceConfig.hpp  SyncProcess.h  shared.h
include/config/: DaemonConfig.h  JobConfig.h  RunOnceJobConfig.h
include/util/: glob.h  line_sink.h  yaml_merge.h
libs/: cli11.cmake  glob.cmake  googletest.cmake  httplib.cmake  reproc.cmake  spdlog.cmake  yaml-cpp.cmake
main/: CMakeLists.txt
main/include/: CliService.hpp  ILogger.hpp  Service.hpp
main/src/: CliService.cpp  ConfigLoader.cpp  Kernel.cpp  Logger.cpp  main.cpp
main/src/config/: ConfigLoader.cpp  INIReader.cpp
main/tests/: CliServiceTest.cpp  ConfigLoaderTest.cpp  ServiceTest.cpp
src/: App.cpp  AsyncProcess.cpp  ChildProcess.cpp  CliService.cpp  Kernel.cpp  Logger.cpp  Monitor.cpp  Service.cpp  SyncProcess.cpp  config.rs  healthcheck.cpp  healthcheck.rs  main.cpp  main.rs  run_once.rs  run_service.rs  web.rs
src/util/: glob.cpp
test/: AppTest.cpp  CMakeLists.txt  JobTest.cpp  JobsManagerTest.cpp  MonitorTest.cpp  YamlDecodeTest.cpp
test/mocks/: AppMock.h  ApplicationMock.h  ChildProcessMock.h  JobMock.h  JobsManagerMock.h
test/mocks/factory/: JobFactoryMock.h
tests/: CliServiceTest.cpp  ServiceTest.cpp
tests/mocks/: LoggerMock.hpp
tinybooter.d/: service1.ini  service2.ini
